Fixed social-items not having correct width on mobile

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -2108,7 +2108,7 @@ footer {
     padding-bottom: 20px;
   }
   .social-item {
-    min-width: 100%;
+    min-width: 300px;
     width: 100%;
   }
   .main .title-text h3 .better-text, .main .title-text h3 {
